<resources>
    <string name="app_name">Waya</string>
    <string name="welcome_message_title">Looking for a party?</string>
    <string name="welcome_message">Welcome to Waya</string>
    <string name="info_message">Waya is the new era of social Network, here you can share your pics, upload videos and look for the best place for you to have a good party nigth or a relaxing talking date with your crush, so dont\'t lose your time! join NOW</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">ingresa o regístrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hours">Horario: </string>
    <string name="exp_date">Vence: </string>
    <string name="title_activity_bar_information">Información del Bar</string>
    <string name="large_text">
        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="direction">Dirección:</string>
    <string name="bar_description">Descripción del bar:</string>
    <string name="date">Fecha:</string>
    <string name="edit_info">Editar / Agregar Información</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="enviar">Enviar</string>
    <string name="take_photo">Tomar Foto</string>
</resources>
