<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="abcd.com.waya.BarInformationActivity"
    tools:showIn="@layout/activity_bar_information"
    android:background="@color/colorBaseWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/titlebar"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="Titulo"
                android:textColor="@color/colorNeonBlueDark"
                android:layout_margin="@dimen/text_margin"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tipobar"
                    android:layout_width="150sp"
                    android:layout_height="60sp"
                    android:text="Tipo Bar"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorBaseWhite"
                    android:padding="16dp"
                    android:background="@drawable/rounded_corner"/>

                <TextView
                    android:id="@+id/generobar"
                    android:layout_width="150sp"
                    android:layout_height="60sp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:text="Género Bar"
                    android:textSize="16sp"
                    android:textColor="@color/colorBaseWhite"
                    android:padding="16dp"
                    android:background="@drawable/rounded_corner"/>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/descripcionlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textColor="#121212"
            android:text="@string/bar_description"/>

        <TextView
            android:id="@+id/descripcionbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/direccionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textColor="@color/colorDarkOrange"
                android:text="@string/direction"/>

            <TextView
                android:id="@+id/direccionbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="texto de prueba"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/horariolabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textColor="@color/colorDarkOrange"
                android:text="@string/hours"/>

            <TextView
                android:id="@+id/horariobar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="texto de prueba"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
